# knights_of_academia_2020_hackathon

./: .gitignore  README.md
arduino/: README.md  compile.sh  main.ino  upload.sh
backend/: CMakeLists.txt  README.md  build.sh  check_mem.sh  execute.sh
backend/lib/: libhttpserver.so.0
backend/src/: README.md  app.py  arduino.cpp  arduino.h  key_state.h  keyboard.cpp  keyboard.h  main.cpp  main.h  server.cpp  server.h  server_handler.cpp  server_handler.h  server_wrapper.cpp  server_wrapper.h
frontend/: .eslintrc.js  README.md  package.json  rollup.config.js
frontend/public/: global.css  index.html
frontend/src/: App.scss  App.svelte  Footer.svelte  Main.svelte  Navbar.svelte
frontend/src/components/keyboard/: Keyboard.svelte  style.scss
frontend/src/components/sidebar/: Sidebar.svelte  style.scss
frontend/src/components/timer/: Timer.svelte  style.scss
